# myvim

./: Cargo.toml  Makefile  build.sh  install.sh
plugin/: myvim.vim
src/: client.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  plugin.rs  xtokio.rs
src/handlers/: mod.rs
src/myplug/: github.rs  myplug.rs
src/plug/: github.rs  mod.rs  plug.rs
