[package]
name = "myvim"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
neovim-lib = "0.6.0"
octocrab = "0.12"
futures = "0.3"
tokio = { version = "1.14.0", features = ["full"] }
#async-std = { version = "1", features = ["attributes", "tokio1"] }
mlua = {version = "*", features = ["luajit", "vendored", "module", "macros"]}
#async-std = { version = "1.2.0", features = ["attributes"] }
